# feedback-summarizer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  clustering.py  docker-compose.yml  main.py  mock.json  mock_response.json  pyproject.toml  test.py
data/: data.csv  data0.csv  dataset.csv  res.csv  sentiment_data.csv  test.csv  test.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/api/: apiClient.js
frontend/src/components/: Dashboard.jsx  FileUpload.jsx  Visualization.jsx
models/: models.py
services/: analysis_service.py  clustering_service.py  file_handler_service.py  llm_service.py  nlp_service.py  pdf_service.py  text_chunking_service.py
tests/: test_pdf_service.py  test_topic_clustering.py
